tests/error/struct_errors/constructor_arg_mismatch.err
Error: Type mismatch (at $FILE:11:13)
   | 
 9 | @guppy
10 | def main() -> None:
11 |     MyStruct(0)
   |              ^ Expected argument of type `(int, int)`, got `int`

Guppy compilation failed due to 1 previous error
